<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BoatTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="coord">Coordonnées GPS</string>
	<string name="identifiants">Identifiants</string>
	<string name="info">Informations Terminal Android</string>
    <string name="btnEnvoyer">Go!</string>
    <string name="longitude">Longitude \:</string>
    <string name="latitude">Latitude \:</string>
    <string name="defaultLongitude">--</string>
    <string name="defaultLatitude">--</string>
    <string name="type">Type \:</string>
    <string name="bateau">Bateau</string>
    <string name="bouee">Bouée</string>
    <string name="nom">Nom \:</string>
    <string name="defaultEditText">Nom</string>
    <string name="active">Activée!</string>
    <string name="desactive">Désactivée</string>
    <string name="emissionSonore">Emission Sonore \:</string>
    <string name="emissionGPS">Emission GPS \:</string>
    <string name="freqEmi">Période d\'émission \:</string>
    <string name="defaultFreq">--</string>
	    	
</resources>
