<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.boattracker.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:background="#ff6347"
        android:padding="10dp"
        android:text="@string/coord"
        android:textColor="#fff"
        android:textStyle="bold" />
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/latitude" />
    		
        <TextView 
            android:id="@+id/textView3"
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:padding="10dp"
    		android:gravity="center"
    		android:text="@string/defaultLatitude" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
        
        <TextView 
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:padding="10dp"
    		android:text="@string/longitude" />
    		
        <TextView 
            android:id="@+id/textView5"
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:padding="10dp"
    		android:gravity="center"
    		android:text="@string/defaultLongitude" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:background="#ff6347"
        android:padding="10dp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:text="@string/identifiants" />
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
        
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:text="@string/type" />
    	
        <RadioGroup
            android:id="@+id/choixType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:checkedButton="@+id/radio2"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bateau" />

            <RadioButton
                android:id="@id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bouee" />
        </RadioGroup>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
        
        <TextView 
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:padding="10dp"
    		android:text="@string/nom" />
    		
        <EditText 
            android:id="@+id/editText1"
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:padding="10dp"
    		android:inputType="text"
    		android:hint="@string/defaultEditText" />
        
    </LinearLayout>

    <Button
        android:id="@+id/btnEnvoyer"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dip"
        android:background="#ff6347"
        android:text="@string/btnEnvoyer"
        android:textColor="#fff" />

</LinearLayout>